--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,36 @@
 {
     "configurations": [
+
+    
         {
-            "name": "(gdb) Iniciar",
+            "name": "debug linux",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/src/Map Generator",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Habilitar a reformatação automática para gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description":  "Definir Tipo de Desmontagem como Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "debug windows (mingw)",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-mingw/src/Map Generator.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
