added helpmarkers, changed temperature latitude algorithm

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,9 +11,16 @@ sources = files(
 
 dependencies = [core_dep, fastnoiselite_dep, json_dep, magic_enum_dep]
 
+cpp_args = []
+
+if (host_machine.system() == 'windows')
+    cpp_args += '-Wl,-subsystem,windows'
+endif
+
 executable(
     'Map Generator',
     sources : sources,
     include_directories: inc,
-    dependencies: dependencies
+    dependencies: dependencies,
+    cpp_args: cpp_args
 )
